<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro"
        android:textSize="30sp"
        android:textColor="#0E228C"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_titulo"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_cadastro"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_amigavel"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_indicador"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_raca"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:id="@+id/et_raca"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_preco"
            android:layout_marginTop="15dp"
            android:inputType="numberDecimal"
            android:id="@+id/et_preco"
            />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/btn_cadastrar"
            android:id="@+id/btn_cadastrar"
            android:onClick="cadastrar"
            android:backgroundTint="#0E228C"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_lista"
        app:layout_constraintTop_toBottomOf="@id/layout_cadastro"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cão cadastrado com sucesso"
            android:textSize="25sp"
            android:visibility="invisible"
            android:id="@+id/tv_sucesso"
            android:textColor="#0F9C11"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cachorro"
            android:visibility="invisible"
            android:id="@+id/iv_cachorro"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>